--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
             - DB_USERNAME=my_nkap
             - DB_PASSWORD=my_nkap
         ports:
-            -   "8000:8000"
+            - "8000:8000"
 
     webserver:
         image: nginx:alpine
@@ -34,7 +34,7 @@ services:
             - app-network
 
     mysql:
-        image: mysql:8.0.3
+        image: mysql:8.0
         container_name: mysql
         restart: unless-stopped
         environment:
@@ -42,10 +42,15 @@ services:
             MYSQL_DATABASE: my_nkap
             MYSQL_USER: my_nkap
             MYSQL_PASSWORD: my_nkap
-        ports:
-            - "3306:3306"
         volumes:
             - mysql:/var/lib/mysql
+        ports:
+            - "3306:3306"
+        healthcheck:
+            test: [ "CMD", "mysqladmin", "ping", "--silent" ]
+            interval: 30s
+            timeout: 10s
+            retries: 5
         networks:
             - app-network
 
