[#STATISTICS]: get all data

--- a/.env.deploy
+++ b/.env.deploy
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=my-nkap
-DB_USERNAME=my-nkap
-DB_PASSWORD=
+DB_DATABASE=my_nkap
+DB_USERNAME=my_nkap
+DB_PASSWORD=my_nkap
 
 TOKEN_KEY=NKAP_237_TOKEN
 
