--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ TOKEN_KEY=NKAP_237_TOKEN
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
