--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=base64:NUxKn4VuyjCi33Y/Bp38fVkmV6Cf4PZd/pxN2HDyGdA=
 APP_DEBUG=true
 APP_URL=http://localhost
+GEMINI_API_KEY=AIzaSyAeTaE2_7iCFxZfNY-japkRIirMTUFXJQs
+GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
