--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-pdo": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "ext-pdo": "*"
+        "spatie/laravel-discord-alerts": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -65,4 +66,3 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
-
