--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "spatie/laravel-discord-alerts": "^1.5"
+        "spatie/laravel-discord-alerts": "^1.5",
         "ext-curl": "*"
     },
     "require-dev": {
